Cleaning up from jaxb1 Removed: - jaxb1-xjc.jar - msv.jar

--- a/jaxb-ri/build.xml
+++ b/jaxb-ri/build.xml
@@ -272,7 +272,7 @@
     <target name="integrate-xsdlib">
         <property name="xsdlib-version" value="2009.2-SNAPSHOT" />
         <get src="http://sysifos-sol.czech.sun.com/hudson/job/msv/lastSuccessfulBuild/artifact/trunk/xsdlib/target/xsdlib-${xsdlib-version}.jar"
-             dest="tools/lib/rebundle/runtime/xsdlib.jar" />
+             dest="tools/lib/util/xsdlib.jar" />
         <get src="http://sysifos-sol.czech.sun.com/hudson/job/msv/lastSuccessfulBuild/artifact/trunk/xsdlib/target/xsdlib-fullsrc.zip"
              dest="tools/lib/src/xsdlib-src.zip" />
     </target>
@@ -416,7 +416,6 @@
         <mkdir dir="${external.dir}/jaxb"/>
         <delete failonerror="false">
             <fileset dir="${external.dir}/jaxb" includes="**/*.jar">
-                <exclude name="**/jaxb1*.jar*"/>
                 <exclude name="**/bnd*.jar*"/>
             </fileset>
         </delete>
@@ -462,7 +461,8 @@
             <arg line="release" />
         </exec>
         <mvn.publish.local jar="${external.dir}/isorelax/isorelax.jar" mvngroup="isorelax" mvnartid="isorelax" mvnversion="${isorelax.version}"/>
-        <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="${jaxb.root}/tools/lib/rebundle/runtime/isorelax.jar"/>
+        <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="/tools/lib/util/isorelax.jar"/>
+
 
         <echo message="building xsdlib"/>
         <unzip src="tools/lib/src/xsdlib-src.zip" dest="${external.dir}"/>
@@ -478,26 +478,28 @@
             <arg line="dist"/>
         </exec>
         <mvn.publish.local jar="${external.dir}/xsdlib/dist/xsdlib.jar" mvngroup="com.sun.msv.datatype.xsd" mvnartid="xsdlib" mvnversion="${xsdlib.version}"/>
-        <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${jaxb.root}/tools/lib/rebundle/runtime/xsdlib.jar"/>
+        <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${jaxb.root}/tools/lib/util/xsdlib.jar"/>
 
-        <echo message="building msv"/>
-        <unzip src="tools/lib/src/msv-src.zip" dest="${external.dir}"/>
-        <delete>
-            <fileset dir="${external.dir}/msv/" includes="**/*.jar"/>
-        </delete>
-        <copy file="${maven.repo.local}/${relaxng-datatype.mvn.path}" tofile="${external.dir}/msv/msv/relaxng-datatype.jar"/>
-        <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${external.dir}/msv/msv/xsdlib.jar"/>
-        <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="${external.dir}/msv/msv/isorelax.jar"/>
-        <copy file="${maven.repo.local}/${resolver.mvn.path}" tofile="${external.dir}/msv/msv/resolver.jar"/>
-        <exec executable="ant" dir="${external.dir}/msv/msv" failonerror="true" newenvironment="true" >
-            <arg line="-Djavac.target=1.5"/>
-            <arg line="-Djavac.source=1.5"/>
-            <arg line="-Dfrom.source=true"/>
-            <arg line="-Dcpath.fromsource=relaxng-datatype.jar:xsdlib.jar:isorelax.jar:resolver.jar"/>
-            <arg line="dist"/>
-        </exec>
-        <mvn.publish.local jar="${external.dir}/msv/msv/dist/msv.jar" mvngroup="com.sun.msv" mvnartid="msv" mvnversion="${msv.version}"/>
-        <copy file="${maven.repo.local}/${msv.mvn.path}" tofile="${jaxb.root}/tools/lib/rebundle/runtime/msv.jar"/>
+      <!--
+              <echo message="building msv"/>
+              <unzip src="tools/lib/src/msv-src.zip" dest="${external.dir}"/>
+              <delete>
+                  <fileset dir="${external.dir}/msv/" includes="**/*.jar"/>
+              </delete>
+              <copy file="${maven.repo.local}/${relaxng-datatype.mvn.path}" tofile="${external.dir}/msv/msv/relaxng-datatype.jar"/>
+              <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${external.dir}/msv/msv/xsdlib.jar"/>
+              <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="${external.dir}/msv/msv/isorelax.jar"/>
+              <copy file="${maven.repo.local}/${resolver.mvn.path}" tofile="${external.dir}/msv/msv/resolver.jar"/>
+              <exec executable="ant" dir="${external.dir}/msv/msv" failonerror="true" newenvironment="true" >
+                  <arg line="-Djavac.target=1.5"/>
+                  <arg line="-Djavac.source=1.5"/>
+                  <arg line="-Dfrom.source=true"/>
+                  <arg line="-Dcpath.fromsource=relaxng-datatype.jar:xsdlib.jar:isorelax.jar:resolver.jar"/>
+                  <arg line="dist"/>
+              </exec>
+              <mvn.publish.local jar="${external.dir}/msv/msv/dist/msv.jar" mvngroup="com.sun.msv" mvnartid="msv" mvnversion="${msv.version}"/>
+              <copy file="${maven.repo.local}/${msv.mvn.path}" tofile="${jaxb.root}/tools/lib/rebundle/runtime/msv.jar"/>
+      -->
 
         <echo message="building istack-commons"/>
         <build.jar.from.srczip jar="${external.dir}/istack-commons-runtime/istack-commons-runtime.jar" srczip="tools/lib/src/istack-commons-runtime-sources.jar" unzipdir="${external.dir}" srcdir="istack-commons-runtime"/>
