--- a/jaxb-ri/tools/bin/xjc.pkg.template
+++ b/jaxb-ri/tools/bin/xjc.pkg.template
@@ -49,7 +49,7 @@ WEBSERVICES_LIB=`cd $bin_dir/../share/lib; pwd`
 #
 # Set CLASSPATH
 #
-CLASSPATH=${WEBSERVICES_LIB}/jaxb-api.jar:${WEBSERVICES_LIB}/jaxb-impl.jar:${WEBSERVICES_LIB}/jaxb1-impl.jar:${WEBSERVICES_LIB}/jaxb-xjc.jar:${WEBSERVICES_LIB}/../../../../usr/share/lib/resolver.jar
+CLASSPATH=${WEBSERVICES_LIB}/jaxb-api.jar:${WEBSERVICES_LIB}/jaxb-impl.jar:${WEBSERVICES_LIB}/jaxb-xjc.jar:${WEBSERVICES_LIB}/../../../../usr/share/lib/resolver.jar
 
 if [ -n "$JAVA_HOME" ]
 then
