--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -235,7 +235,7 @@ activation.mvn.path=javax/activation/activation/${activation.version}/activation
 
 #imported from cvs -d :pserver:guest@cvs.dev.java.net:/cvs checkout -D 20060204 -d stax-ex-20060204 stax-ex
 #stax-ex.svn.url= https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/stax-ex
-stax-ex.version=1.3-SNAPSHOT
+stax-ex.version=1.7
 stax-ex.mvn.path=org/jvnet/staxex/stax-ex/${stax-ex.version}/stax-ex-${stax-ex.version}.jar
 
 #fi.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
