fix version number for OSGi bundle

--- a/build.properties
+++ b/build.properties
@@ -40,8 +40,8 @@
 
 # versions
 release.spec.version=2.2.6
-release.impl.version=2.2.5-1
-release.impl.version.suffix=
+release.impl.version=2.2.5
+release.impl.version.suffix=-2
 
 mvnProxyHost=www-proxy.us.oracle.com
 mvnProxyPort=80
