docs for minor updates should be different from major release

--- a/jaxb-ri/build.xml
+++ b/jaxb-ri/build.xml
@@ -870,7 +870,7 @@ Class-Path: ${manifest.classpath}
             <fileset dir="${jaxb.dist}/samples" />
         </copy>
 
-        <zip destfile="${jaxb.build}/jaxb-ri-${release.impl.version}.src.zip">
+        <zip destfile="${jaxb.build}/jaxb-ri-${release.impl.version}${release.impl.version.suffix}.src.zip">
             <zipfileset dir="${exported.dir}" />
         </zip>
     </target>
@@ -886,8 +886,8 @@ Class-Path: ${manifest.classpath}
 
         <antcall target="release.src.zip" />
 
-        <copy file="${jaxb.build}/jaxb-ri-${release.impl.version}.src.zip" todir="${www.upload.dir}" />
-        <copy file="${basedir}/jaxb-ri-${release.impl.version}.zip" todir="${www.upload.dir}" />
+        <copy file="${jaxb.build}/jaxb-ri-${release.impl.version}${release.impl.version.suffix}.src.zip" todir="${www.upload.dir}" />
+        <copy file="${basedir}/jaxb-ri-${release.impl.version}${release.impl.version.suffix}.zip" todir="${www.upload.dir}" />
         <!--copy file="${jaxb.build}/jaxb-ri.licensee.zip" todir="${www.upload.dir}" /-->
 
         <copy todir="${www.upload.dir}/docs">
@@ -902,12 +902,12 @@ Class-Path: ${manifest.classpath}
         </taskdef>
 
         <soimp  dir="${www.upload.dir}"
-                repository="${www.repository.url}/${release.impl.version}"
+                repository="${www.repository.url}/${release.impl.version}${release.impl.version.suffix}"
                 username="${jaxb.scm.username}"
                 password="${jaxb.scm.password}"
                 create="true"
                 additionalOptions="--no-auth-cache"
-                commitMessage="JAXB-${release.impl.version}" />
+                commitMessage="JAXB-${release.impl.version}${release.impl.version.suffix}" />
     </target>
 
     <macrodef name="mvn.close.repo">
